--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
+  "name": "fullstacked",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts":{
+    "dev": "vite"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "vite": "^4.5.0"
   }
 }
